# goplural

./: .app_key  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_THEMES.md  DEVELOPMENT_HANDOFF.md  DEVELOPMENT_ROADMAP.md  DISCLAIMER.md  FyneApp.toml  INSTALLATION.md  LICENSE  NOTICES.md  README.md  SECURITY.md  __init__.py  about_dialog.py  app.go  aria2_avatar_downloader.py  chat.go  cleanup_for_release.py  custom_themes.py  cyberpunk_plural_theme.py  data.go  database_manager.py  diary_dialog.py  go.mod  go.sum  help_dialog.py  imgui.ini  main.go  main.py  member.go  member_manager.py  parse_readme.py  pk.go  pk_export_parser.py  pk_sync_worker.py  pluralkit_api.py  pluralkit_dialog.py  pyproject.toml  (+6 more)
.github/: pull_request_template.md
frontend/: index.html  package-lock.json
frontend/src/: App.svelte  main.ts  style.css
frontend/src/themes/: cosmo.css  flatly.css  superhero.css
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
old/: main.go  settings.go  sp.go
themes/: default-themes.json  theme.go  themes.go
ui/components/: member_list.py
ui/themes/: manager.py  test_theme_manager.py
