[project]
name = "Plural-Chat"
version = "0.1.0"
description = "A desktop chat application for plural systems with PluralKit integration and proxy detection."
authors = [
    {name = "Duskfall Portal Crew", email = "duskfallcrew@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["plural", "chat", "pluralkit", "did", "osdd", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities"
]

dependencies = [
    "Pillow>=10.0.0,<11",
    "ttkbootstrap>=1.14.0",
    "requests>=2.32.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.8.0",
    "aria2p>=0.12.0"
]

[project.scripts]
plural-chat = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main", 
    "member_manager", 
    "settings_manager", 
    "database_manager",
    "pluralkit_api",
    "pluralkit_dialog", 
    "pk_export_parser",
    "about_dialog",
    "help_dialog"
]
